2000-09-20  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/cf/rrouter.cf, proto/db/routes:
	    Generalizing on various smtp* mechanisms.

	* proto/scheduler.conf.in:
	    Channel prototypes for  smtp77/*, smtp77x/*, and others.
	    Some reordering, and log option rearrangements.

	* transports/smtp/smtp.c, man/smtp.8:
	    ESMTP disabler feature. ( -77 option )

	* packaging/solaris/Makefile.in, packaging/solaris/README,
	    More work at package manufacturing, now it likely works
	    and produces suitable Solaris PKG files.

	* Makefile.in:
	    Copy current compilation time valid  config.status  and
	    ChangeLog files into $MAILSHARE  directory.  Those give
	    a very good idea of HOW the package was made.

	* packaging/solaris/*:
	    Reworked a bit with Solaris pkgmk wizard..

	* proto/cf/aliases.cf:
	    A nuisance (unlikely a security problem) with *-group
	    expansion.  One pair of double-quotes missing.

	* scheduler/mq2.c:
	    mq2_discard() function did completely bogus chain traverse.
	    Oops..

2000-09-19  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* Makefile.in:
	    Version 2.99.54 (retagged here)
	
	* lib/getaddrinfo.c, lib/getzenv.c,
	  smtpserver/mxverify.c, smtpserver/smtpcmds.c:
	    Pointer arithmetic with (void*) !! Urgh..

	* smtpserver/Makefile.in:
	    Oops.. QC failure, wrong dependency order -> compilation failure

	* router/functions.c, proto/cf/aliases.cf, proto/cf/fqdnalias.cf:
	    Suspended the  $(zapDSNnotify ...) processing development.
	    The issues I am trying solve there are rather -- complicated.

	* router/daemonsub.c:
	    Do test for "an inode in processing" while looking for
	    tasks in the router subdirs -- thus won't reinsert a
	    task already in active handling back into the queue.

	* proto/newdbprocessor.in:
	    Test for "^bind", "ldap", "ordered" and "unordered" db
	    types while regenerating the dbases.conf relations.

2000-09-18  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
