@@ -52,6 +52,7 @@ router:
 		getpwnam() from somewhere WITHOUT checking at the
 		possible errno telling that there is e.g. temporary
 		access error with backend database...
+	   Fixed(?) on 21-Sep-2000 with HOLD/DEFER code.
 
 	Error address pickup  ( router/rfc822.c: erraddress() )
 	picks *bad* choices sometimes; e.g. it might consider
